<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".screens.DetailFragment">

            <TextView
                android:id="@+id/shoe_detail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/detail_info"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/shoe_name_edit_text"
                style="@style/ShoeEditInformation"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="26dp"
                android:inputType="text"
                android:hint="@string/shoe" />

            <EditText
                android:id="@+id/shoe_company_edit_text"
                style="@style/ShoeEditInformation"
                android:layout_marginHorizontal="10dp"
                android:inputType="text"
                android:hint="@string/company" />

            <EditText
                android:id="@+id/shoe_number_edit_text"
                style="@style/ShoeEditInformation"
                android:layout_marginHorizontal="10dp"
                android:hint="@string/number"
                android:inputType="number" />

            <EditText
                android:id="@+id/shoe_description_edit_text"
                style="@style/ShoeEditInformation"
                android:layout_marginHorizontal="10dp"
                android:inputType="text"
                android:hint="@string/description" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_button"
            app:layout_constraintTop_toTopOf="@+id/save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
