<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/instructions_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">


        <TextView
            android:id="@+id/introduction_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/welcom_to_store"
            android:layout_marginTop="36dp"/>

        <TextView
            android:id="@+id/instruction_text"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="36dp"
            android:text="@string/instructions" />

        <TextView
            android:id="@+id/first_instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_instruction"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/initialize_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_list"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</layout>